--- a/task13-browser-use/pyproject.toml
+++ b/task13-browser-use/pyproject.toml
@@ -4,4 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "browser-use>=0.1.40",
+    "fastapi>=0.115.12",
+    "langchain-google-genai>=2.1.2",
+    "python-dotenv>=1.0.0",
+    "streamlit>=1.44.1",
+    "uvicorn>=0.34.0",
+]
