--- a/task09-multimodal-video-analysis/.gcloudignore
+++ b/task09-multimodal-video-analysis/.gcloudignore
@@ -1,17 +1,5 @@
-node_modules/
-src/
-public/
-bun.lockb
-package.json
-package-lock.json
-vite.config.js
-/index.html
-.git/
-eslint.config.js
-README.md
-.DS_Store
-.env
-.prettierrc
-.gcloudignore
-.gitignore
-dist/videos/
+# Ignore everything except app.yaml and the build directory
+*
+!app.yaml
+!build
+!build/**
